added gatsby-remark-mermaid and puppeteer

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "gatsby": "^2.30.2",
     "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "prismjs": "^1.23.0",
+    "puppeteer": "^5.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^6.1.0"
