--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^2.30.2",
     "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-typography": "^2.10.0",
     "gatsby-remark-autolink-headers": "^2.9.0",
     "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-remark-prismjs": "^3.11.0",
@@ -27,7 +28,9 @@
     "puppeteer": "^5.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "ts-node": "^9.1.1",
